# otus-cpp-review

./: .gitignore  .travis.yml  makedeploy.py  readme.md
allocator/: CMakeLists.txt  bitmap.h  config.h.in  main.cpp  mycont.h  optalloc.h
bulk/: CMakeLists.txt  bulk.cpp  bulk.h  main.cpp  test2  test3
matrix/: CMakeLists.txt  main.cpp  matrix.h  pretty.h
mypaint/: CMakeLists.txt  controller.cpp  controller.h  doc.Doxyfile  figure.h  input.h  main.cpp  model.h  stuff.h  view.h  window.h
print_ip/: CMakeLists.txt  main.cpp  print_ip.Doxyfile  print_ip.h
timus/: t1113.cpp  t2098.cpp
